y.output
Terminals unused in grammar

    DO


Grammar

    0 $accept: program $end

    1 program: rule

    2 rule: rule_func
    3     | rule rule_func

    4 declar: variable_create
    5       | declar COMMA variable_create

    6 expression: variable_use
    7           | func_call
    8           | expression PLUS expression
    9           | expression MINUS expression
   10           | PLUS expression
   11           | MINUS expression
   12           | expression MUL expression
   13           | expression DIV expression
   14           | expression REMDIV expression
   15           | expression BYTEAND expression
   16           | expression BYTEOR expression
   17           | expression BYTEXOR expression
   18           | expression AND expression
   19           | expression OR expression
   20           | expression NOT expression
   21           | LPAREN expression RPAREN
   22           | NOT expression
   23           | expression LE expression
   24           | expression GE expression
   25           | expression EQ expression
   26           | expression NE expression
   27           | expression LT expression
   28           | expression GT expression
   29           | expression QUESTION expression DOUBLEPOINT expression

   30 assign_stmt: ASSIGN
   31            | MINUS ASSIGN
   32            | PLUS ASSIGN
   33            | MUL ASSIGN
   34            | DIV ASSIGN
   35            | REMDIV ASSIGN
   36            | BYTEAND ASSIGN
   37            | BYTEOR ASSIGN
   38            | BYTEXOR ASSIGN

   39 variable_create: TYPE NAME
   40                | POINT_TYPE NAME
   41                | NAME

   42 variable_use: NAME
   43             | NUMBERF
   44             | NUMBER
   45             | TRUE
   46             | FALSE
   47             | DOBLEBUCKET NAME DOBLEBUCKET
   48             | BUCKET NAME BUCKET
   49             | NULLPTR

   50 statements: declar SEMICOLON
   51           | declar assign_stmt expression SEMICOLON
   52           | RETURN expression SEMICOLON
   53           | RETURN SEMICOLON
   54           | BREAK SEMICOLON
   55           | CONTINUE SEMICOLON
   56           | COUT OUT out_exp SEMICOLON
   57           | CIN IN in_exp SEMICOLON
   58           | func_call SEMICOLON
   59           | branching

   60 branching: if_branch
   61          | if_branch else_branch
   62          | if_branch elseif_branch
   63          | if_branch elseif_branch else_branch
   64          | while_branch
   65          | for_branch
   66          | switch_branch

   67 switch_branch: switch_stmt LBRACE case_default_branch RBRACE
   68              | switch_stmt LBRACE RBRACE

   69 switch_stmt: SWITCH LPAREN expression RPAREN

   70 case_default_branch: case_default_list
   71                    | case_default_branch case_default_list

   72 case_default_list: case_stmt DOUBLEPOINT body BREAK SEMICOLON
   73                  | case_stmt DOUBLEPOINT BREAK SEMICOLON
   74                  | default_stmt DOUBLEPOINT body
   75                  | default_stmt DOUBLEPOINT

   76 case_stmt: CASE LPAREN expression RPAREN

   77 default_stmt: DEFAULT

   78 for_branch: for_stmt declar RPAREN LBRACE body RBRACE
   79           | for_stmt declar RPAREN RBRACE
   80           | for_stmt declar assign_stmt expression RPAREN LBRACE body RBRACE
   81           | for_stmt declar assign_stmt expression RPAREN LBRACE RBRACE

   82 for_stmt: FOR LPAREN declar SEMICOLON expression SEMICOLON
   83         | FOR LPAREN declar assign_stmt expression SEMICOLON expression SEMICOLON

   84 while_branch: while_stmt LBRACE body RBRACE
   85             | while_stmt LBRACE RBRACE

   86 while_stmt: WHILE LPAREN expression RPAREN

   87 if_branch: if_stmt LBRACE body RBRACE
   88          | if_stmt LBRACE RBRACE

   89 if_stmt: IF LPAREN expression RPAREN

   90 elseif_branch: elseif_list
   91              | elseif_branch elseif_list

   92 elseif_list: elseif_stmt LBRACE body RBRACE
   93            | elseif_stmt LBRACE RBRACE

   94 elseif_stmt: ELSEIF LPAREN expression RPAREN

   95 else_branch: else_stmt LBRACE body RBRACE
   96            | else_stmt LBRACE RBRACE

   97 else_stmt: ELSE

   98 out_exp: expression
   99        | out_exp OUT expression

  100 in_exp: NAME
  101       | in_exp IN NAME

  102 rule_func: func LPAREN RPAREN SEMICOLON
  103          | func LPAREN args RPAREN SEMICOLON
  104          | func LPAREN RPAREN LBRACE body RBRACE
  105          | func LPAREN RPAREN LBRACE RBRACE
  106          | func LPAREN args RPAREN LBRACE body RBRACE
  107          | func LPAREN args RPAREN LBRACE RBRACE

  108 func: TYPE NAME
  109     | POINT_TYPE NAME

  110 args: func
  111     | args COMMA func

  112 body: statements
  113     | body statements

  114 func_call: NAME LPAREN RPAREN
  115          | NAME LPAREN args_value RPAREN

  116 args_value: expression
  117           | args_value COMMA expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <number> (258) 44
    NUMBERF <numberf> (259) 43
    TYPE <var> (260) 39 108
    POINT_TYPE <var> (261) 40 109
    NAME <var> (262) 39 40 41 42 47 48 100 101 108 109 114 115
    NULLPTR <constant_lexems> (263) 49
    TRUE <constant_lexems> (264) 45
    FALSE <constant_lexems> (265) 46
    SWITCH <constant_lexems> (266) 69
    CASE <constant_lexems> (267) 76
    DEFAULT <constant_lexems> (268) 77
    BREAK <constant_lexems> (269) 54 72 73
    CONTINUE <constant_lexems> (270) 55
    RETURN <constant_lexems> (271) 52 53
    FOR <constant_lexems> (272) 82 83
    WHILE <constant_lexems> (273) 86
    IF <constant_lexems> (274) 89
    ELSEIF <constant_lexems> (275) 94
    ELSE <constant_lexems> (276) 97
    DO <constant_lexems> (277)
    CIN <constant_lexems> (278) 57
    COUT <constant_lexems> (279) 56
    LBRACE <data> (280) 67 68 78 80 81 84 85 87 88 92 93 95 96 104 105 106 107
    RBRACE <data> (281) 67 68 78 79 80 81 84 85 87 88 92 93 95 96 104 105 106 107
    LPAREN <data> (282) 21 69 76 82 83 86 89 94 102 103 104 105 106 107 114 115
    RPAREN <data> (283) 21 69 76 78 79 80 81 86 89 94 102 103 104 105 106 107 114 115
    SEMICOLON <data> (284) 50 51 52 53 54 55 56 57 58 72 73 82 83 102 103
    COMMA <data> (285) 5 111 117
    BYTEAND <data> (286) 15 36
    BYTEOR <data> (287) 16 37
    BYTEXOR <data> (288) 17 38
    LE <data> (289) 23
    GE <data> (290) 24
    EQ <data> (291) 25
    NE <data> (292) 26
    LT <data> (293) 27
    GT <data> (294) 28
    ASSIGN <data> (295) 30 31 32 33 34 35 36 37 38
    PLUS <data> (296) 8 10 32
    MINUS <data> (297) 9 11 31
    MUL <data> (298) 12 33
    DIV <data> (299) 13 34
    REMDIV <data> (300) 14 35
    NOT <data> (301) 20 22
    AND <data> (302) 18
    OR <data> (303) 19
    OUT <data> (304) 56 99
    IN <data> (305) 57 101
    DOBLEBUCKET <data> (306) 47
    BUCKET <data> (307) 48
    QUESTION <data> (308) 29
    DOUBLEPOINT <data> (309) 29 72 73 74 75


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program <nonterm> (56)
        on left: 1
        on right: 0
    rule <nonterm> (57)
        on left: 2 3
        on right: 1 3
    declar <nonterm> (58)
        on left: 4 5
        on right: 5 50 51 78 79 80 81 82 83
    expression <nonterm> (59)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 51 52 69 76 80 81 82 83 86 89 94 98 99 116 117
    assign_stmt <nonterm> (60)
        on left: 30 31 32 33 34 35 36 37 38
        on right: 51 80 81 83
    variable_create <nonterm> (61)
        on left: 39 40 41
        on right: 4 5
    variable_use <nonterm> (62)
        on left: 42 43 44 45 46 47 48 49
        on right: 6
    statements <nonterm> (63)
        on left: 50 51 52 53 54 55 56 57 58 59
        on right: 112 113
    branching <nonterm> (64)
        on left: 60 61 62 63 64 65 66
        on right: 59
    switch_branch <nonterm> (65)
        on left: 67 68
        on right: 66
    switch_stmt <nonterm> (66)
        on left: 69
        on right: 67 68
    case_default_branch <nonterm> (67)
        on left: 70 71
        on right: 67 71
    case_default_list <nonterm> (68)
        on left: 72 73 74 75
        on right: 70 71
    case_stmt <nonterm> (69)
        on left: 76
        on right: 72 73
    default_stmt <nonterm> (70)
        on left: 77
        on right: 74 75
    for_branch <nonterm> (71)
        on left: 78 79 80 81
        on right: 65
    for_stmt <nonterm> (72)
        on left: 82 83
        on right: 78 79 80 81
    while_branch <nonterm> (73)
        on left: 84 85
        on right: 64
    while_stmt <nonterm> (74)
        on left: 86
        on right: 84 85
    if_branch <nonterm> (75)
        on left: 87 88
        on right: 60 61 62 63
    if_stmt <nonterm> (76)
        on left: 89
        on right: 87 88
    elseif_branch <nonterm> (77)
        on left: 90 91
        on right: 62 63 91
    elseif_list <nonterm> (78)
        on left: 92 93
        on right: 90 91
    elseif_stmt <nonterm> (79)
        on left: 94
        on right: 92 93
    else_branch <nonterm> (80)
        on left: 95 96
        on right: 61 63
    else_stmt <nonterm> (81)
        on left: 97
        on right: 95 96
    out_exp <nonterm> (82)
        on left: 98 99
        on right: 56 99
    in_exp <nonterm> (83)
        on left: 100 101
        on right: 57 101
    rule_func <nonterm> (84)
        on left: 102 103 104 105 106 107
        on right: 2 3
    func <nonterm> (85)
        on left: 108 109
        on right: 102 103 104 105 106 107 110 111
    args <nonterm> (86)
        on left: 110 111
        on right: 103 106 107 111
    body <nonterm> (87)
        on left: 112 113
        on right: 72 74 78 80 84 87 92 95 104 106 113
    func_call <nonterm> (88)
        on left: 114 115
        on right: 7 58
    args_value <nonterm> (89)
        on left: 116 117
        on right: 115 117


State 0

    0 $accept: . program $end

    TYPE        shift, and go to state 1
    POINT_TYPE  shift, and go to state 2

    program    go to state 3
    rule       go to state 4
    rule_func  go to state 5
    func       go to state 6


State 1

  108 func: TYPE . NAME

    NAME  shift, and go to state 7


State 2

  109 func: POINT_TYPE . NAME

    NAME  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: rule .
    3 rule: rule . rule_func

    TYPE        shift, and go to state 1
    POINT_TYPE  shift, and go to state 2

    $default  reduce using rule 1 (program)

    rule_func  go to state 10
    func       go to state 6


State 5

    2 rule: rule_func .

    $default  reduce using rule 2 (rule)


State 6

  102 rule_func: func . LPAREN RPAREN SEMICOLON
  103          | func . LPAREN args RPAREN SEMICOLON
  104          | func . LPAREN RPAREN LBRACE body RBRACE
  105          | func . LPAREN RPAREN LBRACE RBRACE
  106          | func . LPAREN args RPAREN LBRACE body RBRACE
  107          | func . LPAREN args RPAREN LBRACE RBRACE

    LPAREN  shift, and go to state 11


State 7

  108 func: TYPE NAME .

    $default  reduce using rule 108 (func)


State 8

  109 func: POINT_TYPE NAME .

    $default  reduce using rule 109 (func)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    3 rule: rule rule_func .

    $default  reduce using rule 3 (rule)


State 11

  102 rule_func: func LPAREN . RPAREN SEMICOLON
  103          | func LPAREN . args RPAREN SEMICOLON
  104          | func LPAREN . RPAREN LBRACE body RBRACE
  105          | func LPAREN . RPAREN LBRACE RBRACE
  106          | func LPAREN . args RPAREN LBRACE body RBRACE
  107          | func LPAREN . args RPAREN LBRACE RBRACE

    TYPE        shift, and go to state 1
    POINT_TYPE  shift, and go to state 2
    RPAREN      shift, and go to state 12

    func  go to state 13
    args  go to state 14


State 12

  102 rule_func: func LPAREN RPAREN . SEMICOLON
  104          | func LPAREN RPAREN . LBRACE body RBRACE
  105          | func LPAREN RPAREN . LBRACE RBRACE

    LBRACE     shift, and go to state 15
    SEMICOLON  shift, and go to state 16


State 13

  110 args: func .

    $default  reduce using rule 110 (args)


State 14

  103 rule_func: func LPAREN args . RPAREN SEMICOLON
  106          | func LPAREN args . RPAREN LBRACE body RBRACE
  107          | func LPAREN args . RPAREN LBRACE RBRACE
  111 args: args . COMMA func

    RPAREN  shift, and go to state 17
    COMMA   shift, and go to state 18


State 15

  104 rule_func: func LPAREN RPAREN LBRACE . body RBRACE
  105          | func LPAREN RPAREN LBRACE . RBRACE

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 21
    SWITCH      shift, and go to state 22
    BREAK       shift, and go to state 23
    CONTINUE    shift, and go to state 24
    RETURN      shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    CIN         shift, and go to state 29
    COUT        shift, and go to state 30
    RBRACE      shift, and go to state 31

    declar           go to state 32
    variable_create  go to state 33
    statements       go to state 34
    branching        go to state 35
    switch_branch    go to state 36
    switch_stmt      go to state 37
    for_branch       go to state 38
    for_stmt         go to state 39
    while_branch     go to state 40
    while_stmt       go to state 41
    if_branch        go to state 42
    if_stmt          go to state 43
    body             go to state 44
    func_call        go to state 45


State 16

  102 rule_func: func LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 102 (rule_func)


State 17

  103 rule_func: func LPAREN args RPAREN . SEMICOLON
  106          | func LPAREN args RPAREN . LBRACE body RBRACE
  107          | func LPAREN args RPAREN . LBRACE RBRACE

    LBRACE     shift, and go to state 46
    SEMICOLON  shift, and go to state 47


State 18

  111 args: args COMMA . func

    TYPE        shift, and go to state 1
    POINT_TYPE  shift, and go to state 2

    func  go to state 48


State 19

   39 variable_create: TYPE . NAME

    NAME  shift, and go to state 49


State 20

   40 variable_create: POINT_TYPE . NAME

    NAME  shift, and go to state 50


State 21

   41 variable_create: NAME .
  114 func_call: NAME . LPAREN RPAREN
  115          | NAME . LPAREN args_value RPAREN

    LPAREN  shift, and go to state 51

    $default  reduce using rule 41 (variable_create)


State 22

   69 switch_stmt: SWITCH . LPAREN expression RPAREN

    LPAREN  shift, and go to state 52


State 23

   54 statements: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 24

   55 statements: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 25

   52 statements: RETURN . expression SEMICOLON
   53           | RETURN . SEMICOLON

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    SEMICOLON    shift, and go to state 62
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 68
    variable_use  go to state 69
    func_call     go to state 70


State 26

   82 for_stmt: FOR . LPAREN declar SEMICOLON expression SEMICOLON
   83         | FOR . LPAREN declar assign_stmt expression SEMICOLON expression SEMICOLON

    LPAREN  shift, and go to state 71


State 27

   86 while_stmt: WHILE . LPAREN expression RPAREN

    LPAREN  shift, and go to state 72


State 28

   89 if_stmt: IF . LPAREN expression RPAREN

    LPAREN  shift, and go to state 73


State 29

   57 statements: CIN . IN in_exp SEMICOLON

    IN  shift, and go to state 74


State 30

   56 statements: COUT . OUT out_exp SEMICOLON

    OUT  shift, and go to state 75


State 31

  105 rule_func: func LPAREN RPAREN LBRACE RBRACE .

    $default  reduce using rule 105 (rule_func)


State 32

    5 declar: declar . COMMA variable_create
   50 statements: declar . SEMICOLON
   51           | declar . assign_stmt expression SEMICOLON

    SEMICOLON  shift, and go to state 76
    COMMA      shift, and go to state 77
    BYTEAND    shift, and go to state 78
    BYTEOR     shift, and go to state 79
    BYTEXOR    shift, and go to state 80
    ASSIGN     shift, and go to state 81
    PLUS       shift, and go to state 82
    MINUS      shift, and go to state 83
    MUL        shift, and go to state 84
    DIV        shift, and go to state 85
    REMDIV     shift, and go to state 86

    assign_stmt  go to state 87


State 33

    4 declar: variable_create .

    $default  reduce using rule 4 (declar)


State 34

  112 body: statements .

    $default  reduce using rule 112 (body)


State 35

   59 statements: branching .

    $default  reduce using rule 59 (statements)


State 36

   66 branching: switch_branch .

    $default  reduce using rule 66 (branching)


State 37

   67 switch_branch: switch_stmt . LBRACE case_default_branch RBRACE
   68              | switch_stmt . LBRACE RBRACE

    LBRACE  shift, and go to state 88


State 38

   65 branching: for_branch .

    $default  reduce using rule 65 (branching)


State 39

   78 for_branch: for_stmt . declar RPAREN LBRACE body RBRACE
   79           | for_stmt . declar RPAREN RBRACE
   80           | for_stmt . declar assign_stmt expression RPAREN LBRACE body RBRACE
   81           | for_stmt . declar assign_stmt expression RPAREN LBRACE RBRACE

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 89

    declar           go to state 90
    variable_create  go to state 33


State 40

   64 branching: while_branch .

    $default  reduce using rule 64 (branching)


State 41

   84 while_branch: while_stmt . LBRACE body RBRACE
   85             | while_stmt . LBRACE RBRACE

    LBRACE  shift, and go to state 91


State 42

   60 branching: if_branch .
   61          | if_branch . else_branch
   62          | if_branch . elseif_branch
   63          | if_branch . elseif_branch else_branch

    ELSEIF  shift, and go to state 92
    ELSE    shift, and go to state 93

    $default  reduce using rule 60 (branching)

    elseif_branch  go to state 94
    elseif_list    go to state 95
    elseif_stmt    go to state 96
    else_branch    go to state 97
    else_stmt      go to state 98


State 43

   87 if_branch: if_stmt . LBRACE body RBRACE
   88          | if_stmt . LBRACE RBRACE

    LBRACE  shift, and go to state 99


State 44

  104 rule_func: func LPAREN RPAREN LBRACE body . RBRACE
  113 body: body . statements

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 21
    SWITCH      shift, and go to state 22
    BREAK       shift, and go to state 23
    CONTINUE    shift, and go to state 24
    RETURN      shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    CIN         shift, and go to state 29
    COUT        shift, and go to state 30
    RBRACE      shift, and go to state 100

    declar           go to state 32
    variable_create  go to state 33
    statements       go to state 101
    branching        go to state 35
    switch_branch    go to state 36
    switch_stmt      go to state 37
    for_branch       go to state 38
    for_stmt         go to state 39
    while_branch     go to state 40
    while_stmt       go to state 41
    if_branch        go to state 42
    if_stmt          go to state 43
    func_call        go to state 45


State 45

   58 statements: func_call . SEMICOLON

    SEMICOLON  shift, and go to state 102


State 46

  106 rule_func: func LPAREN args RPAREN LBRACE . body RBRACE
  107          | func LPAREN args RPAREN LBRACE . RBRACE

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 21
    SWITCH      shift, and go to state 22
    BREAK       shift, and go to state 23
    CONTINUE    shift, and go to state 24
    RETURN      shift, and go to state 25
    FOR         shift, and go to state 26
    WHILE       shift, and go to state 27
    IF          shift, and go to state 28
    CIN         shift, and go to state 29
    COUT        shift, and go to state 30
    RBRACE      shift, and go to state 103

    declar           go to state 32
    variable_create  go to state 33
    statements       go to state 34
    branching        go to state 35
    switch_branch    go to state 36
    switch_stmt      go to state 37
    for_branch       go to state 38
    for_stmt         go to state 39
    while_branch     go to state 40
    while_stmt       go to state 41
    if_branch        go to state 42
    if_stmt          go to state 43
    body             go to state 104
    func_call        go to state 45


State 47

  103 rule_func: func LPAREN args RPAREN SEMICOLON .

    $default  reduce using rule 103 (rule_func)


State 48

  111 args: args COMMA func .

    $default  reduce using rule 111 (args)


State 49

   39 variable_create: TYPE NAME .

    $default  reduce using rule 39 (variable_create)


State 50

   40 variable_create: POINT_TYPE NAME .

    $default  reduce using rule 40 (variable_create)


State 51

  114 func_call: NAME LPAREN . RPAREN
  115          | NAME LPAREN . args_value RPAREN

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    RPAREN       shift, and go to state 105
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 106
    variable_use  go to state 69
    func_call     go to state 70
    args_value    go to state 107


State 52

   69 switch_stmt: SWITCH LPAREN . expression RPAREN

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 108
    variable_use  go to state 69
    func_call     go to state 70


State 53

   54 statements: BREAK SEMICOLON .

    $default  reduce using rule 54 (statements)


State 54

   55 statements: CONTINUE SEMICOLON .

    $default  reduce using rule 55 (statements)


State 55

   44 variable_use: NUMBER .

    $default  reduce using rule 44 (variable_use)


State 56

   43 variable_use: NUMBERF .

    $default  reduce using rule 43 (variable_use)


State 57

   42 variable_use: NAME .
  114 func_call: NAME . LPAREN RPAREN
  115          | NAME . LPAREN args_value RPAREN

    LPAREN  shift, and go to state 51

    $default  reduce using rule 42 (variable_use)


State 58

   49 variable_use: NULLPTR .

    $default  reduce using rule 49 (variable_use)


State 59

   45 variable_use: TRUE .

    $default  reduce using rule 45 (variable_use)


State 60

   46 variable_use: FALSE .

    $default  reduce using rule 46 (variable_use)


State 61

   21 expression: LPAREN . expression RPAREN

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 109
    variable_use  go to state 69
    func_call     go to state 70


State 62

   53 statements: RETURN SEMICOLON .

    $default  reduce using rule 53 (statements)


State 63

   10 expression: PLUS . expression

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 110
    variable_use  go to state 69
    func_call     go to state 70


State 64

   11 expression: MINUS . expression

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 111
    variable_use  go to state 69
    func_call     go to state 70


State 65

   22 expression: NOT . expression

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 112
    variable_use  go to state 69
    func_call     go to state 70


State 66

   47 variable_use: DOBLEBUCKET . NAME DOBLEBUCKET

    NAME  shift, and go to state 113


State 67

   48 variable_use: BUCKET . NAME BUCKET

    NAME  shift, and go to state 114


State 68

    8 expression: expression . PLUS expression
    9           | expression . MINUS expression
   12           | expression . MUL expression
   13           | expression . DIV expression
   14           | expression . REMDIV expression
   15           | expression . BYTEAND expression
   16           | expression . BYTEOR expression
   17           | expression . BYTEXOR expression
   18           | expression . AND expression
   19           | expression . OR expression
   20           | expression . NOT expression
   23           | expression . LE expression
   24           | expression . GE expression
   25           | expression . EQ expression
   26           | expression . NE expression
   27           | expression . LT expression
   28           | expression . GT expression
   29           | expression . QUESTION expression DOUBLEPOINT expression
   52 statements: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 115
    BYTEAND    shift, and go to state 116
    BYTEOR     shift, and go to state 117
    BYTEXOR    shift, and go to state 118
    LE         shift, and go to state 119
    GE         shift, and go to state 120
    EQ         shift, and go to state 121
    NE         shift, and go to state 122
    LT         shift, and go to state 123
    GT         shift, and go to state 124
    PLUS       shift, and go to state 125
    MINUS      shift, and go to state 126
    MUL        shift, and go to state 127
    DIV        shift, and go to state 128
    REMDIV     shift, and go to state 129
    NOT        shift, and go to state 130
    AND        shift, and go to state 131
    OR         shift, and go to state 132
    QUESTION   shift, and go to state 133


State 69

    6 expression: variable_use .

    $default  reduce using rule 6 (expression)


State 70

    7 expression: func_call .

    $default  reduce using rule 7 (expression)


State 71

   82 for_stmt: FOR LPAREN . declar SEMICOLON expression SEMICOLON
   83         | FOR LPAREN . declar assign_stmt expression SEMICOLON expression SEMICOLON

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 89

    declar           go to state 134
    variable_create  go to state 33


State 72

   86 while_stmt: WHILE LPAREN . expression RPAREN

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 135
    variable_use  go to state 69
    func_call     go to state 70


State 73

   89 if_stmt: IF LPAREN . expression RPAREN

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 136
    variable_use  go to state 69
    func_call     go to state 70


State 74

   57 statements: CIN IN . in_exp SEMICOLON

    NAME  shift, and go to state 137

    in_exp  go to state 138


State 75

   56 statements: COUT OUT . out_exp SEMICOLON

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 139
    variable_use  go to state 69
    out_exp       go to state 140
    func_call     go to state 70


State 76

   50 statements: declar SEMICOLON .

    $default  reduce using rule 50 (statements)


State 77

    5 declar: declar COMMA . variable_create

    TYPE        shift, and go to state 19
    POINT_TYPE  shift, and go to state 20
    NAME        shift, and go to state 89

    variable_create  go to state 141


State 78

   36 assign_stmt: BYTEAND . ASSIGN

    ASSIGN  shift, and go to state 142


State 79

   37 assign_stmt: BYTEOR . ASSIGN

    ASSIGN  shift, and go to state 143


State 80

   38 assign_stmt: BYTEXOR . ASSIGN

    ASSIGN  shift, and go to state 144


State 81

   30 assign_stmt: ASSIGN .

    $default  reduce using rule 30 (assign_stmt)


State 82

   32 assign_stmt: PLUS . ASSIGN

    ASSIGN  shift, and go to state 145


State 83

   31 assign_stmt: MINUS . ASSIGN

    ASSIGN  shift, and go to state 146


State 84

   33 assign_stmt: MUL . ASSIGN

    ASSIGN  shift, and go to state 147


State 85

   34 assign_stmt: DIV . ASSIGN

    ASSIGN  shift, and go to state 148


State 86

   35 assign_stmt: REMDIV . ASSIGN

    ASSIGN  shift, and go to state 149


State 87

   51 statements: declar assign_stmt . expression SEMICOLON

    NUMBER       shift, and go to state 55
    NUMBERF      shift, and go to state 56
    NAME         shift, and go to state 57
    NULLPTR      shift, and go to state 58
    TRUE         shift, and go to state 59
    FALSE        shift, and go to state 60
    LPAREN       shift, and go to state 61
    PLUS         shift, and go to state 63
    MINUS        shift, and go to state 64
    NOT          shift, and go to state 65
    DOBLEBUCKET  shift, and go to state 66
    BUCKET       shift, and go to state 67

    expression    go to state 150
    variable_use  go to state 69
    func_call     go to state 70


State 88

   67 switch_branch: switch_stmt LBRACE . case_default_branch RBRACE
   68              | switch_stmt LBRACE . RBRACE

    CASE     shift, and go to state 151
    DEFAULT  shift, and go to state 152
    RBRACE   shift, and go to state 153

    case_default_branch  go to state 154
    case_default_list    go to state 155
    case_stmt            go to state 156
    default_stmt         go to state 157


State 89

   41 variable_create: NAME .

    $default  reduce using rule 41 (variable_create)


State 90

    5 declar: declar . COMMA variable_create
   78 for_branch: for_stmt declar . RPAREN LBRACE body RBRACE
   79           | for_stmt declar . RPAREN RBRACE
   80           | for_stmt declar . assign_stmt expression RPAREN LBRACE body RBRACE
   81           | for_stmt declar . assign_stmt expression RPAREN LBRACE RBRACE

    RPAREN   shift, and go to state 158
    COMMA    shift, and go to state 77
    BYTEAND  shift, and go to state 78
    BYTEOR   shift, and go to state 79
    BYTEXOR  shift, and go to state 80
    ASSIGN   shift, and go to state 81
    PLUS     shift, and go to state 82
    MINUS    shift, and go to state 83
    MUL      shift, and go to state 84
    DIV      shift, and go to state 85
    REMDIV   shift, and go to state 86

    assign_stmt  go to state 159


State 91

   84 while_branch: while_stmt LBRACE . body RBRACE
   85             | while_stmt LBRACE . RBRACE
